feat(technician-timeoff): finished developing apis for the feat
